# openipahound

./: LICENSE  MANIFEST.in  README.md  openipahound-extension.json  pyproject.toml
docs/: authentication.md  collect.md  nodes-and-edges.md  research.md  saved-queries.md  upload-to-bloodhound.md
examples/: env.example
queries/saved/: README.md  freeipa-addmember-host-admin-paths.json  freeipa-host-access-overview.json  freeipa-host-admin-paths.json  freeipa-node-kind-inventory.json  freeipa-research-certificate-enrollment.json  freeipa-research-delegation-signals.json  freeipa-research-hbac-service-detail.json  freeipa-research-managedby-control.json  freeipa-research-rbac-permission-triage.json  freeipa-research-trust-replication.json  freeipa-server-admin-paths.json  freeipa-service-key-control.json  freeipa-ssh-and-sudo-same-principal.json  freeipa-user-group-host-admin-paths.json  freeipa-utility-group-direct-members.json  freeipa-utility-group-nested-members.json  freeipa-utility-hostgroup-direct-members.json  freeipa-utility-hostgroup-nested-members.json  freeipa-utility-object-inbound-control.json  freeipa-utility-principal-effective-expansion.json  freeipa-utility-principal-outbound-control.json
src/openipahound/: __init__.py  __main__.py  cli.py  ldap.py  opengraph.py  validation.py
